--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.1",
+    "@prisma/client": "^5.7.1",
+    "install": "^0.13.0",
+    "next": "14.0.4",
+    "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "svix": "^1.15.0"
   },
   "devDependencies": {
     "typescript": "^5",
