--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "postinstall": "prisma generate",
+    "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "prisma generate && next start",
     "lint": "next lint"
