--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma migrate deploy",
     "vercel-build": "prisma generate && next build",
     "dev": "prisma generate && next dev",
     "build": "prisma generate && prisma db push && next build",
